--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,24 +1,17 @@
 .profile__name {
-  display: inline-block;
   color: #fff;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   padding: 0;
-  margin: 0 18px 16px 0;
+  margin: 0 18px 0 0;
 }
-
 
 @media screen and (max-width: 964px) {
   .profile__name {
-    min-width: 189px;
-    font-style: normal;
-    font-weight: 500;
     font-size: 27px;
     line-height: 33px;
-    vertical-align: sub;
-    text-align: center;
-    margin: 0 10px 14px 0;
+    margin: 0 10px 0 0;
   }
 }
