--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -8,12 +8,11 @@
   background-position: center;
   background-size: cover;
   cursor: pointer;
-  position: absolute;
-  left: 240px;
-  bottom: 30px;
+  padding: 0;
+  margin: 30px 15px 30px 0;
 }
 
 .cards__like:hover {
   transition: opacity .5s linear;
-  opacity: .8;
+  opacity: .5;
 }
