--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(270px, min-content));
+  grid-template-columns: repeat(auto-fit, minmax(282px, max-content));
   grid-auto-rows: min-content;
   justify-content: center;
   column-gap: 17px;
