--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,11 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 330px) {
+  .footer__copyright {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
