--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,6 +1,8 @@
-.popup__button {
+.form__button {
   width: 358px;
   height: 50px;
+  border: 0;
+  border-radius: 2px;
   background-color: #000;
   color: #fff;
   font-style: normal;
@@ -12,13 +14,13 @@
   margin: 0;
 }
 
-.popup__button:hover {
+.form__button:hover {
   transition: opacity .5s linear;
   opacity: 0.8;
 }
 
 @media screen and (max-width: 768px) {
-  .popup__button {
+  .form__button {
     width: 238px;
     height: 46px;
     font-size: 14px;
