--- a/blocks/form/__name/form__name.css
+++ b/blocks/form/__name/form__name.css
@@ -1,4 +1,4 @@
-.popup__item {
+.form__name {
   width: 100%;
   height: 27px;
   font-family: inherit;
@@ -8,14 +8,23 @@
   line-height: 17px;
   text-align: left;
   border: 0;
-  border-bottom: 1px solid #bcbcc4;
+  border-bottom: 1px solid rgb(0, 0, 0, .2);
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;
+  margin: 0 0 30px 0;
   padding: 0;
 }
 
-.popup__item:focus {
+.form__name:focus {
   outline-color: #eed2bb;
+}
+
+@media screen and (max-width: 768px) {
+  .form__name {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
