--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,9 +1,8 @@
 .popup__close {
-  display: block;
   width: 32px;
   height: 32px;
   border: 0;
-  background-color: #000;
+  background: none;
   background-image: url('../../../images/close_icon.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -12,20 +11,20 @@
   padding: 0;
   margin: 0;
   position: absolute;
-  left: 438px;
+  right: -40px;
   top: -40px;
 }
 
 .popup__close:hover {
   transition: opacity .5s linear;
-  opacity: .8;
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
   .popup__close {
     width: 20px;
     height: 20px;
-    left: 262px;
+    right: 0;
     top: -36px;
   }
 }
