--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,23 +1,16 @@
 .popup__container {
-  box-sizing: border-box;
-  width: 430px;
-  height: 330px;
+  width: 100%;
+  max-width: 430px;
   background-color: #fff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  padding: 34px 36px 37px 36px;
   margin: 0;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
 }
 
-/* Отступ мод. окна по макету сверху 123px + 141px - это половина высоты мод. окна */
+
 @media screen and (max-width: 768px) {
   .popup__container {
-    top: 264px;
-    width: 282px;
-    height: 322px;
-    padding: 25px 22px;
+    max-width: 282px;
   }
 }
