--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,5 +1,17 @@
 .popup_opened {
-  /* Второй вариант центрирования модального окна при открытии:
-    display: flex; justify-content: center; align-items: center; */
-  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .popup_opened {
+    justify-content: flex-start;
+    margin-top: 123px;
+  }
 }
