--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -4,6 +4,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
+  border-radius: 2px;
   background-color: #000;
   background-image: url('../../../images/plus.svg');
   background-repeat: no-repeat;
@@ -15,7 +16,7 @@
 
 .profile__button:hover {
   transition: opacity .5s linear;
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 964px) {
