--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,12 +4,17 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  text-overflow: ellipsis;
+  max-width: 294px;
+  overflow: hidden;
+  white-space: nowrap;
   padding: 0;
   margin: 0 18px 0 0;
 }
 
 @media screen and (max-width: 964px) {
   .profile__name {
+    max-width: 189px;
     font-size: 27px;
     line-height: 33px;
     margin: 0 10px 0 0;
