--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -4,12 +4,17 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  max-width: 294px;
+  overflow: hidden;
+  white-space: nowrap;
   margin: 0;
   padding: 0;
 }
 
 @media screen and (max-width: 964px) {
   .profile__profession {
+    max-width: 189px;
     text-align: center;
     font-size: 14px;
     line-height: 17px;
