--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -1,4 +1,4 @@
-.form__name {
+.form__item {
   width: 100%;
   height: 27px;
   font-family: inherit;
@@ -12,19 +12,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0 0 30px 0;
   padding: 0;
+  margin: 0;
 }
 
-.form__name:focus {
+.form__item:focus {
   outline-color: #eed2bb;
-}
-
-@media screen and (max-width: 768px) {
-  .form__name {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-  }
 }
