--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,17 +1,15 @@
 .popup_opened {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 195px 1fr 1fr;
+  justify-items: center;
+  align-items: start;
   padding: 0;
   margin: 0;
 }
 
 @media screen and (max-width: 768px) {
   .popup_opened {
-    justify-content: flex-start;
-    margin-top: 123px;
+    grid-template-rows: 123px 1fr 1fr;
   }
 }
