--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -8,6 +8,7 @@
   background-color: #000;
   background-image: url('../../../images/plus.svg');
   background-repeat: no-repeat;
+  background-size: 22px 22px;
   background-position: center;
   cursor: pointer;
   padding: 0;
@@ -22,5 +23,6 @@
 @media screen and (max-width: 964px) {
   .profile__button {
     width: 282px;
+    background-size: 16px 16px;
   }
 }
