--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -16,6 +16,20 @@
   margin: 0;
 }
 
+.form__item:nth-child(2) {
+  margin: 0 0 30px 0;
+}
+
+.form__item:nth-child(3) {
+  margin: 0 0 48px 0;
+}
+
 .form__item:focus {
   outline-color: #eed2bb;
+}
+
+@media screen and (max-width: 768px) {
+  .form__item:nth-child(3) {
+    margin-bottom: 45px;
+  }
 }
