--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,10 +4,9 @@
   background-color: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  margin: 0;
   position: relative;
-  grid-column: 2/3;
-  grid-row: 2/3;
+  margin: 0;
+  padding: 0;
 }
 
 
