--- a/blocks/form-profile/__heading/form-profile__heading.css
+++ b/blocks/form-profile/__heading/form-profile__heading.css
@@ -1,4 +1,4 @@
-.form__heading {
+.form-profile__heading {
   color: #000;
   font-style: normal;
   font-weight: 900;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .form__heading {
+  .form-profile__heading {
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 72px;
