--- a/blocks/form-profile/form-profile.css
+++ b/blocks/form-profile/form-profile.css
@@ -1,4 +1,4 @@
-.form {
+.form-profile {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .form {
+  .form-profile {
     padding: 25px 22px;
   }
 }
