--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -2,7 +2,7 @@
   width: 32px;
   height: 32px;
   border: 0;
-  background: none;
+  background: transparent;
   background-image: url('../../../images/close_icon.svg');
   background-repeat: no-repeat;
   background-position: center;
