--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -9,6 +10,10 @@
   bottom: 0;
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   padding: 0;
+  transition: visibility .5s, opacity .5s linear;
 }
