--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url('../blocks/cards/cards.css');
 @import url('../blocks/cards/__item/cards__item.css');
 @import url('../blocks/cards/__image/cards__image.css');
+@import url('../blocks/cards/__trash/cards__trash.css');
 @import url('../blocks/cards/__description/cards__description.css');
 @import url('../blocks/cards/__title/cards__title.css');
 @import url('../blocks/cards/__like/cards__like.css');
@@ -31,14 +32,29 @@
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 
-/* Меню */
+/* Форма редактирования профайла */
 @import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/__profile/popup__profile.css');
+@import url('../blocks/popup/__card/popup__card.css');
+@import url('../blocks/popup/__card-image/popup__card-image.css');
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__container-image/popup__container-image.css');
 @import url('../blocks/popup/__close/popup__close.css');
-@import url('../blocks/form/form.css');
-@import url('../blocks/form/__heading/form__heading.css');
-@import url('../blocks/form/__item/form__item.css');
-@import url('../blocks/form/__item/_el/form__item_el_name.css');
-@import url('../blocks/form/__item/_el/form__item_el_profession.css');
-@import url('../blocks/form/__button/form__button.css');
+@import url('../blocks/popup/__figure/popup__figure.css');
+@import url('../blocks/popup/__image/popup__image.css');
+@import url('../blocks/popup/__image-caption/popup__image-caption.css');
+@import url('../blocks/form-profile/form-profile.css');
+@import url('../blocks/form-profile/__heading/form-profile__heading.css');
+@import url('../blocks/form-profile/__item/form-profile__item.css');
+@import url('../blocks/form-profile/__item/_el/form-profile__item_el_name.css');
+@import url('../blocks/form-profile/__item/_el/form-profile__item_el_profession.css');
+@import url('../blocks/form-profile/__button/form-profile__button.css');
+
+/* Форма добавления карточек */
+@import url('../blocks/form-card/form-card.css');
+@import url('../blocks/form-card/__heading/form-card__heading.css');
+@import url('../blocks/form-card/__item/form-card__item.css');
+@import url('../blocks/form-card/__item/_el/form-card__item_el_name.css');
+@import url('../blocks/form-card/__item/_el/form-card__item_el_profession.css');
+@import url('../blocks/form-card/__button/form-card__button.css');
