--- a/src/blocks/cards/__like/cards__like.css
+++ b/src/blocks/cards/__like/cards__like.css
@@ -1,5 +1,5 @@
 .cards__like {
-  width: 22px;
+  width: 100%;
   height: 19px;
   border: 0;
   background-color: #fff;
@@ -9,7 +9,7 @@
   background-size: cover;
   cursor: pointer;
   padding: 0;
-  margin: 30px 21px 0 0;
+  margin: 0;
 }
 
 .cards__like:hover {
