--- a/src/blocks/cards/__trash/cards__trash.css
+++ b/src/blocks/cards/__trash/cards__trash.css
@@ -6,9 +6,11 @@
   right: 20px;
   cursor: pointer;
   z-index: 1;
+  transition: opacity .5s linear;
+  padding: 0;
+  margin: 0;
 }
 
 .cards__trash:hover {
   opacity: 0.6;
-  transition: opacity .5s linear;
 }
