--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,15 +1,9 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-position: 50% 50%;
   object-fit: cover;
   padding: 0;
-  margin: 0 30px 0 0;
-}
-
-@media screen and (max-width: 964px) {
-  .profile__avatar {
-    margin: 0 0 26px 0;
-  }
+  margin: 0;
 }
