Mesto(сервер) - html, css, js - отработка функционала - разработка-2

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -59,3 +59,4 @@
 @import url('../blocks/popup/__figure/popup__figure.css');
 @import url('../blocks/popup/__image/popup__image.css');
 @import url('../blocks/popup/__image-caption/popup__image-caption.css');
+@import url('../blocks/popup/__agreement/popup__agreement.css');
